--- a/index.Rmd
+++ b/index.Rmd
@@ -14,7 +14,7 @@ df_print: paged
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE, fig.align = "center", fig.width = 6, fig.height = 4, cache = T, fig.path = "plots/")
+knitr::opts_chunk$set(echo = TRUE, fig.align = "center", fig.width = 6, fig.height = 4, cache = T, fig.path = "./plots/")
 # automatically create a bib database for R packages
 knitr::write_bib(c(
   .packages(), 'bookdown', 'knitr', 'rmarkdown'
